keynotes,notificationsstyles,scheduler

--- a/public/mods/scheduler/schedulerView.html
+++ b/public/mods/scheduler/schedulerView.html
@@ -1,4 +1,9 @@
-<div class="jumbotron text-center">
 
-    <p>{{ tagline }}</p>
-</div>
+
+<br>
+<br>
+<br>
+<br>
+
+ <div ng-controller="schedulerController">
+    <jqx-scheduler jqx-settings="settings" id="scheduler"></jqx-scheduler>
